More on boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -210,6 +210,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(start, end):\n",
+    "    chk = [[False] * N for _ in range(N)]\n",
+    "    chk[start][0] = chk[0][start] = True\n",
+    "    \n",
+    "    dq = deque()\n",
+    "    dq.append((start, 0))\n",
+    "    dq.append((0, start))   \n",
+    "    \n",
+    "    while dq:\n",
+    "        y, d = dq.popleft()\n",
+    "        if end == y:\n",
+    "            return d        \n",
+    "        nd = d + 1        \n",
+    "        for v in friends_dict[y]:            \n",
+    "            dq.append((v, nd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(start, end):\n",
+    "    chk = [[False] * N for _ in range(N)]\n",
+    "    chk[start][0] = chk[0][start] = True\n",
+    "    \n",
+    "    ans_list = []\n",
+    "    dq = deque()\n",
+    "    dq.append((start, 0))\n",
+    "    dq.append((0, start))  \n",
+    "    print(f\"start : {start},  end : {end},   d : 0,  ans_list : {ans_list}\")\n",
+    "    print()   \n",
+    "    \n",
+    "    while dq:\n",
+    "        y, d = dq.popleft()\n",
+    "        print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "        \n",
+    "        if y == end:            \n",
+    "            ans_list.append(d) \n",
+    "            print(f\"y : {y},  d : {d},  ans_list : {ans_list}\")\n",
+    "            return ans_list\n",
+    "                   \n",
+    "        else:\n",
+    "            nd = d + 1        \n",
+    "            for i in range(len(relations_matrix)):\n",
+    "                if not chk[y][i] and not chk[i][y]:\n",
+    "                    chk[y][i] = chk[i][y] = True            \n",
+    "                    dq.append((i, nd))\n",
+    "                    print(f\"dq : {dq}\")\n",
+    "            print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bfs(0, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 6, 7, 16]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kevin = []\n",
+    "\n",
+    "for i in range(5):\n",
+    "    sum = 0\n",
+    "    for j in range(5):\n",
+    "        if j == i:\n",
+    "            continue\n",
+    "        sum += bfs(i, j)\n",
+    "    kevin.append(sum)\n",
+    "    \n",
+    "print(kevin)\n",
+    "kevin.index(min(kevin)) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
@@ -278,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +406,7 @@
     "    ans_list = []\n",
     "    dq = deque()\n",
     "    dq.append((start, 0))\n",
+    "    dq.append((0, start))\n",
     "    print(f\"start : {start},  end : {end},   d : 0,  ans_list : {ans_list}\")\n",
     "    print()   \n",
     "    \n",
@@ -308,7 +426,52 @@
     "                dq.append((v, nd))\n",
     "                print(f\"dq : {dq}\")\n",
     "        print()\n",
-    "    return min(ans_list)"
+    "    return ans_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start : 2,  end : 0,   d : 0,  ans_list : []\n",
+      "\n",
+      "y : 2,  d : 0,  ans_list : []\n",
+      "dq : deque([(0, 2), (1, 1)])\n",
+      "dq : deque([(0, 2), (1, 1), (3, 1)])\n",
+      "\n",
+      "y : 0,  d : 2,  ans_list : []\n",
+      "y : 0,  d : 2,  ans_list : [2]\n",
+      "dq : deque([(1, 1), (3, 1), (3, 3)])\n",
+      "\n",
+      "y : 1,  d : 1,  ans_list : [2]\n",
+      "\n",
+      "y : 3,  d : 1,  ans_list : [2]\n",
+      "dq : deque([(3, 3), (4, 2)])\n",
+      "\n",
+      "y : 3,  d : 3,  ans_list : [2]\n",
+      "\n",
+      "y : 4,  d : 2,  ans_list : [2]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bfs(2, 0)"
    ]
   },
   {
@@ -557,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +729,7 @@
        "2"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
