--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -5,7 +5,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "adj = [[] for _ in range(N)]\n",
+    "for _ in range(M):\n",
+    "    a, b = map(lambda x : x-1, map(int, input().split()))"
+   ]
   }
  ],
  "metadata": {
