Final version for boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -2,16 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n",
+      "[2]\n",
+      "[0, 3, 1]\n",
+      "[0, 4, 2]\n",
+      "[3]\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import deque\n",
     "\n",
     "N, M = map(int, input().split())\n",
     "adj = [[] for _ in range(N)]\n",
     "for _ in range(M):\n",
-    "    a, b = map(lambda x : x-1, map(int, input().split()))"
+    "    a, b = map(lambda x : x-1, map(int, input().split()))\n",
+    "    adj[a].append(b)\n",
+    "    adj[b].append(a)\n",
+    "    \n",
+    "for row in adj:\n",
+    "    print(row)"
    ]
   }
  ],
