Final version for boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -30,6 +30,43 @@
     "for row in adj:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "adj = [[] for _ in range(N)]\n",
+    "for _ in range(M):\n",
+    "    a, b = map(lambda x : x-1, map(int, input().split()))\n",
+    "    adj[a].append(b)\n",
+    "    adj[b].append(a)"
+   ]
   }
  ],
  "metadata": {
