Final version for boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -33,10 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "kevin = []  # 각각 사람들의 케빈베이컨의 수를 저장하는 리스트\n",
+    "ans = (-1, N ** 2)  # 각각 사람들의 인덱스와 그의 케빈베이컨 수를 튜플로 저장"
+   ]
   },
   {
    "cell_type": "code",
@@ -65,7 +68,10 @@
     "for _ in range(M):\n",
     "    a, b = map(lambda x : x-1, map(int, input().split()))\n",
     "    adj[a].append(b)\n",
-    "    adj[b].append(a)"
+    "    adj[b].append(a)\n",
+    "    \n",
+    "kevin = []  \n",
+    "ans = (-1, N ** 2)  "
    ]
   }
  ],
