Final version for boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -46,7 +46,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bfs(start, goal):\n",
+    "    chk = [False] * N\n",
+    "    chk[start] = True\n",
+    "    \n",
+    "    dq = deque()\n",
+    "    dq.append((start, 0))\n",
+    "    \n",
+    "    while dq:\n",
+    "        now, d = dq.popleft()\n",
+    "        if now == goal:\n",
+    "            return d\n",
+    "        nd = d + 1\n",
+    "        for nxt in adj[now]:\n",
+    "            if not chk[nxt]:\n",
+    "                chk[nxt] = True\n",
+    "                dq.append((nxt, nd))"
+   ]
   },
   {
    "cell_type": "code",
@@ -71,7 +88,24 @@
     "    adj[b].append(a)\n",
     "    \n",
     "kevin = []  \n",
-    "ans = (-1, N ** 2)  "
+    "ans = (-1, N ** 2)  \n",
+    "\n",
+    "def bfs(start, goal):\n",
+    "    chk = [False] * N\n",
+    "    chk[start] = True\n",
+    "    \n",
+    "    dq = deque()\n",
+    "    dq.append((start, 0))\n",
+    "    \n",
+    "    while dq:\n",
+    "        now, d = dq.popleft()\n",
+    "        if now == goal:\n",
+    "            return d\n",
+    "        nd = d + 1\n",
+    "        for nxt in adj[now]:\n",
+    "            if not chk[nxt]:\n",
+    "                chk[nxt] = True\n",
+    "                dq.append((nxt, nd))"
    ]
   }
  ],
