Final version for boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,47 @@
     "                chk[nxt] = True\n",
     "                dq.append((nxt, nd))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_kevin(start):\n",
+    "    tot = 0\n",
+    "    for i in range(N):\n",
+    "        if i != start:\n",
+    "            tot += bfs(start, i)\n",
+    "    return tot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kevin : [6, 8, 5, 5, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(N):\n",
+    "    kevin.append(get_kevin(i))\n",
+    "    \n",
+    "print(f\"kevin : {kevin}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -105,7 +146,14 @@
     "        for nxt in adj[now]:\n",
     "            if not chk[nxt]:\n",
     "                chk[nxt] = True\n",
-    "                dq.append((nxt, nd))"
+    "                dq.append((nxt, nd))\n",
+    "                \n",
+    "def get_kevin(start):\n",
+    "    tot = 0\n",
+    "    for i in range(N):\n",
+    "        if i != start:\n",
+    "            tot += bfs(start, i)\n",
+    "    return tot"
    ]
   }
  ],
