Final version for boj_1389.ipynb

--- a/boj_1389.ipynb
+++ b/boj_1389.ipynb
@@ -101,17 +101,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, v in enumerate(kevin):\n",
+    "    if ans[1] > v:\n",
+    "        ans = (i, v)\n",
+    "        \n",
+    "print(ans)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ans[0] + 1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -153,7 +177,16 @@
     "    for i in range(N):\n",
     "        if i != start:\n",
     "            tot += bfs(start, i)\n",
-    "    return tot"
+    "    return tot\n",
+    "\n",
+    "for i in range(N):\n",
+    "    kevin.append(get_kevin(i))\n",
+    "    \n",
+    "for i, v in enumerate(kevin):\n",
+    "    if ans[1] > v:\n",
+    "        ans = (i, v)\n",
+    "        \n",
+    "print(ans[0] + 1)"
    ]
   }
  ],
