Final answer on boj_1915.ipynb

--- a/boj_1915.ipynb
+++ b/boj_1915.ipynb
@@ -232,11 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ' '",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1915.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1915.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m n, m \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m())\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1915.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m arr \u001b[39m=\u001b[39m [\u001b[39minput\u001b[39m() \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1915.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m dp \u001b[39m=\u001b[39m [[\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m m \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n)]\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ' '"
+     ]
+    }
+   ],
    "source": [
-    "n, m = map(int, input())\n",
+    "n, m = map(int, input().split())\n",
     "\n",
     "arr = [input() for _ in range(n)]\n",
     "dp = [[0] for m in range(n)]\n",
