--- a/boj_1915.ipynb
+++ b/boj_1915.ipynb
@@ -253,6 +253,46 @@
     "            if arr[i][j] == \"1\":\n",
     "                dp[i][j] = min(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]) + 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01011000\n",
+      "10110100\n",
+      "01100110\n",
+      "10111111\n",
+      "00111110\n",
+      "00111111\n",
+      "11111111\n",
+      "10111110\n",
+      "00011000\n",
+      "\n",
+      "[0, 1, 0, 1, 1, 0, 0, 0]\n",
+      "[1, 0, 1, 1, 0, 1, 0, 0]\n",
+      "[0, 1, 1, 0, 0, 1, 1, 0]\n",
+      "[1, 0, 1, 1, 1, 1, 2, 1]\n",
+      "[0, 0, 1, 2, 2, 2, 2, 0]\n",
+      "[0, 0, 1, 2, 3, 3, 3, 1]\n",
+      "[1, 1, 1, 2, 3, 4, 4, 2]\n",
+      "[1, 0, 1, 2, 3, 4, 5, 0]\n",
+      "[0, 0, 0, 1, 2, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in arr:\n",
+    "    print(row)\n",
+    "print()\n",
+    "\n",
+    "for row in dp:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
