More on boj_1915.ipynb

--- a/boj_1915.ipynb
+++ b/boj_1915.ipynb
@@ -293,6 +293,28 @@
     "for row in dp:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "한변의 길이 : 5,  사각형의 넓이 : 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans = 0\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        ans = max(ans, dp[i][j])\n",
+    "\n",
+    "print(f\"한변의 길이 : {ans},  사각형의 넓이 : {ans ** 2}\")"
+   ]
   }
  ],
  "metadata": {
