More on boj_1915.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -5,7 +5,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr = [input() for _ in range(10)]\n",
+    "dp = [[0] * len(arr[0] for _ in range(10))]"
+   ]
   }
  ],
  "metadata": {
