More on boj_1915.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = [input() for _ in range(10)]\n",
+    "arr = [map(int, input().split()) for _ in range(10)]\n",
     "dp = [[0] * len(arr[0] for _ in range(10))]"
    ]
   }
