--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,20 +12,47 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m arr \u001b[39m=\u001b[39m [\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit()) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dp \u001b[39m=\u001b[39m [[\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39;49m(arr[\u001b[39m0\u001b[39;49m] \u001b[39mfor\u001b[39;49;00m _ \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39m10\u001b[39;49m))]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m arr:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(row)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m arr \u001b[39m=\u001b[39m [\u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit())) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dp \u001b[39m=\u001b[39m [[\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39;49m(arr[\u001b[39m0\u001b[39;49m] \u001b[39mfor\u001b[39;49;00m _ \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39m10\u001b[39;49m))]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m arr:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(row)\n",
       "\u001b[1;31mTypeError\u001b[0m: object of type 'generator' has no len()"
      ]
     }
    ],
    "source": [
-    "arr = [list(map(int, input().split())) for _ in range(10)]\n",
-    "dp = [[0] * len(arr[0] for _ in range(10))]\n",
+    "arr = [map(int, input().split()) for _ in range(10)]\n",
+    "dp = [[0] * len(arr[0]) for _ in range(10)]\n",
     "\n",
     "for row in arr:\n",
     "    print(row)\n",
     "print()\n",
     "\n",
     "for row in dp:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 1, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in arr:\n",
     "    print(row)"
    ]
   }
