--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -44,6 +44,24 @@
     "for row in dp:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(arr[0])):\n",
+    "    if arr[0][i] == 1:\n",
+    "        dp[0][i] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
