--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -47,6 +47,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -58,10 +65,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(1, 10):\n",
+    "    if arr[i][0] == 1:\n",
+    "        dp[i][0] = 1\n",
+    "    for j in range(1, len(arr[0])):\n",
+    "        if arr[i][j] == 1:\n",
+    "            dp[i][j] = min(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]) + 1\n",
+    "            if dp[i][j] == dp[i][j-1] or dp[i][j] == dp[i-1][j] or dp[i][j] == dp[i-1][j-1]:\n",
+    "                dp[i][j] -= 1          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 2, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 1, 2, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 2, 2, 2, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 2, 3, 0, 0, 0]\n",
+      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in dp:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 1, 0, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
+      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in dp:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
