--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -47,13 +47,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -65,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +67,12 @@
     "        dp[i][0] = 1\n",
     "    for j in range(1, len(arr[0])):\n",
     "        if arr[i][j] == 1:\n",
-    "            dp[i][j] = min(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]) + 1\n",
-    "            if dp[i][j] == dp[i][j-1] or dp[i][j] == dp[i-1][j] or dp[i][j] == dp[i-1][j-1]:\n",
-    "                dp[i][j] -= 1          "
+    "            dp[i][j] = min(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]) + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -108,30 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 1, 0, 0, 1, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
-      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for row in dp:\n",
-    "    print(row)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
