--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -72,6 +72,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 1, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in arr:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -99,10 +126,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(arr[0])):\n",
+    "        if dp[i][j] >= max(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]) and dp[i][j] >= 2:\n",
+    "            dp[i][j-1] = dp[i-1][j] = dp[i-1][j-1] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 2, 0, 2, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
+      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in dp:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
