--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -126,41 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10):\n",
-    "    for j in range(len(arr[0])):\n",
-    "        if dp[i][j] >= max(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]) and dp[i][j] >= 2:\n",
-    "            dp[i][j-1] = dp[i-1][j] = dp[i-1][j-1] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 2, 0, 2, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
-      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for row in dp:\n",
-    "    print(row)"
+    "for i in range(1, 10):\n",
+    "    if arr[i][0] == 1:\n",
+    "        dp[i][0] = 1\n",
+    "    for j in range(1, len(arr[0])):\n",
+    "        if arr[i][j] == 1:\n",
+    "            dp[i][j] = min(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]) + 1\n",
+    "            if dp[i][j] = max(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]):\n",
+    "                dp[i][j-1] = dp[i-1][j] = dp[i-1][j-1] =1"
    ]
   }
  ],
