More on boj_1915.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -126,18 +126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2099153099.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [31]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if dp[i][j] == 4 and dp[i][j] <= max(max([max(dp[i-k][j-l] for l in range(3, 0, -1))] for k in range(3, 0, -1)):\u001b[0m\n\u001b[1;37m                                                                                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(1, 10):\n",
-    "    if arr[i][0] == 1:\n",
-    "        dp[i][0] = 1\n",
-    "    for j in range(1, len(arr[0])):\n",
-    "        if arr[i][j] == 1:\n",
-    "            dp[i][j] = min(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]) + 1\n",
-    "            if dp[i][j] = max(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]):\n",
-    "                dp[i][j-1] = dp[i-1][j] = dp[i-1][j-1] =1"
+    "for i in range(10):\n",
+    "    for j in range(len(arr[0])):\n",
+    "        if dp[i][j] == 2 and dp[i][j] > max(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]):\n",
+    "            dp[i][j-1] = dp[i-1][j] = dp[i-1][j-1] = 0\n",
+    "        elif dp[i][j] == 2 and dp[i][j] <= max(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]):\n",
+    "            dp[i][j] = 1\n",
+    "            "
    ]
   }
  ],
