--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -47,7 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp = [[0] * len(arr[0]) for _ in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -126,26 +135,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2099153099.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [31]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if dp[i][j] == 4 and dp[i][j] <= max(max([max(dp[i-k][j-l] for l in range(3, 0, -1))] for k in range(3, 0, -1)):\u001b[0m\n\u001b[1;37m                                                                                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(10):\n",
     "    for j in range(len(arr[0])):\n",
     "        if dp[i][j] == 2 and dp[i][j] > max(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]):\n",
     "            dp[i][j-1] = dp[i-1][j] = dp[i-1][j-1] = 0\n",
     "        elif dp[i][j] == 2 and dp[i][j] <= max(dp[i][j-1], dp[i-1][j], dp[i-1][j-1]):\n",
-    "            dp[i][j] = 1\n",
-    "            "
+    "            dp[i][j] -= 1\n",
+    "        elif dp[i][j] == 3 and dp[i][j] > max(dp[i][j-2], dp[i][j-1], dp[i-1][j-2], dp[i-1][j-1], dp[i-1][j], dp[i-2][j-2], dp[i-2][j-1], dp[j-2][j]):\n",
+    "            dp[i][j-2] = dp[i][j-1] = dp[i-1][j-2] = dp[i-1][j-1] = dp[i-1][j] = dp[i-2][j-2] = dp[i-2][j-1] = dp[j-2][j] = 0\n",
+    "        elif dp[i][j] == 3 and dp[i][j] <= max(dp[i][j-2], dp[i][j-1], dp[i-1][j-2], dp[i-1][j-1], dp[i-1][j], dp[i-2][j-2], dp[i-2][j-1], dp[j-2][j]):\n",
+    "            dp[i][j] -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 2, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 3, 0, 0, 0]\n",
+      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in dp:\n",
+    "    print(row)"
    ]
   }
  ],
