More on boj_1915.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -47,6 +47,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n",
+      "[False, False, False, False, False, False, False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "chk = [[False] * len(arr[0]) for _ in range(10)]\n",
+    "\n",
+    "for row in chk:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
