More on boj_1915.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -35,7 +35,7 @@
    ],
    "source": [
     "arr = [list(map(int, input().split())) for _ in range(10)]\n",
-    "dp = [[(0, False, 0, 0)] * len(arr[0]) for _ in range(10)]\n",
+    "dp = [(0, i, j, False) for j in len(arr[0]) for i in range(10)]\n",
     "\n",
     "for row in arr:\n",
     "    print(row)\n",
