More on boj_1915.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,40 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 1, 1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 1, 1, 1, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 1, 1, 1, 1, 1, 0, 0, 0]\n",
-      "[0, 0, 0, 1, 1, 1, 1, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 1, 1, 1, 0, 0, 0]\n",
-      "[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[9, 8]\n",
+      "[1011000]\n",
+      "[10110100]\n",
+      "[1100110]\n",
+      "[10111111]\n",
+      "[111110]\n",
+      "[111111]\n",
+      "[11111111]\n",
+      "[10111110]\n",
+      "[11000]\n",
       "\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "(0, 0, 0, False)\n",
+      "(0, 1, 0, False)\n",
+      "(0, 2, 0, False)\n",
+      "(0, 3, 0, False)\n",
+      "(0, 4, 0, False)\n",
+      "(0, 5, 0, False)\n",
+      "(0, 6, 0, False)\n",
+      "(0, 7, 0, False)\n",
+      "(0, 8, 0, False)\n",
+      "(0, 9, 0, False)\n",
+      "(0, 0, 1, False)\n",
+      "(0, 1, 1, False)\n",
+      "(0, 2, 1, False)\n",
+      "(0, 3, 1, False)\n",
+      "(0, 4, 1, False)\n",
+      "(0, 5, 1, False)\n",
+      "(0, 6, 1, False)\n",
+      "(0, 7, 1, False)\n",
+      "(0, 8, 1, False)\n",
+      "(0, 9, 1, False)\n"
      ]
     }
    ],
    "source": [
     "arr = [list(map(int, input().split())) for _ in range(10)]\n",
-    "dp = [(0, i, j, False) for j in len(arr[0]) for i in range(10)]\n",
+    "dp = [(0, i, j, False) for j in range(len(arr[0])) for i in range(10)]\n",
     "\n",
     "for row in arr:\n",
     "    print(row)\n",
@@ -43,6 +53,44 @@
     "\n",
     "for row in dp:\n",
     "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0, 0, False) \n",
+      "(0, 1, 0, False) \n",
+      "(0, 2, 0, False) \n",
+      "(0, 3, 0, False) \n",
+      "(0, 4, 0, False) \n",
+      "(0, 5, 0, False) \n",
+      "(0, 6, 0, False) \n",
+      "(0, 7, 0, False) \n",
+      "(0, 8, 0, False) \n",
+      "(0, 9, 0, False) \n",
+      "(0, 0, 1, False) \n",
+      "(0, 1, 1, False) \n",
+      "(0, 2, 1, False) \n",
+      "(0, 3, 1, False) \n",
+      "(0, 4, 1, False) \n",
+      "(0, 5, 1, False) \n",
+      "(0, 6, 1, False) \n",
+      "(0, 7, 1, False) \n",
+      "(0, 8, 1, False) \n",
+      "(0, 9, 1, False) \n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in dp:\n",
+    "    print(row, end=' ')\n",
+    "    print()"
    ]
   },
   {
