--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -45,7 +45,7 @@
    ],
    "source": [
     "arr = [list(map(int, input().split())) for _ in range(10)]\n",
-    "dp = [(0, i, j, False) for j in range(len(arr[0])) for i in range(10)]\n",
+    "dp = [[(0, i, j, False) for j in range(len(arr[0]))] for i in range(10)]\n",
     "\n",
     "for row in arr:\n",
     "    print(row)\n",
@@ -57,40 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 0, 0, False) \n",
-      "(0, 1, 0, False) \n",
-      "(0, 2, 0, False) \n",
-      "(0, 3, 0, False) \n",
-      "(0, 4, 0, False) \n",
-      "(0, 5, 0, False) \n",
-      "(0, 6, 0, False) \n",
-      "(0, 7, 0, False) \n",
-      "(0, 8, 0, False) \n",
-      "(0, 9, 0, False) \n",
-      "(0, 0, 1, False) \n",
-      "(0, 1, 1, False) \n",
-      "(0, 2, 1, False) \n",
-      "(0, 3, 1, False) \n",
-      "(0, 4, 1, False) \n",
-      "(0, 5, 1, False) \n",
-      "(0, 6, 1, False) \n",
-      "(0, 7, 1, False) \n",
-      "(0, 8, 1, False) \n",
-      "(0, 9, 1, False) \n"
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dp[\u001b[39m1\u001b[39;49m][\u001b[39m10\u001b[39;49m]\n",
+      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
      ]
     }
    ],
    "source": [
-    "for row in dp:\n",
-    "    print(row, end=' ')\n",
-    "    print()"
+    "dp[1][10]"
    ]
   },
   {
