--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,49 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[9, 8]\n",
-      "[1011000]\n",
-      "[10110100]\n",
-      "[1100110]\n",
-      "[10111111]\n",
-      "[111110]\n",
-      "[111111]\n",
-      "[11111111]\n",
-      "[10111110]\n",
-      "[11000]\n",
-      "\n",
-      "(0, 0, 0, False)\n",
-      "(0, 1, 0, False)\n",
-      "(0, 2, 0, False)\n",
-      "(0, 3, 0, False)\n",
-      "(0, 4, 0, False)\n",
-      "(0, 5, 0, False)\n",
-      "(0, 6, 0, False)\n",
-      "(0, 7, 0, False)\n",
-      "(0, 8, 0, False)\n",
-      "(0, 9, 0, False)\n",
-      "(0, 0, 1, False)\n",
-      "(0, 1, 1, False)\n",
-      "(0, 2, 1, False)\n",
-      "(0, 3, 1, False)\n",
-      "(0, 4, 1, False)\n",
-      "(0, 5, 1, False)\n",
-      "(0, 6, 1, False)\n",
-      "(0, 7, 1, False)\n",
-      "(0, 8, 1, False)\n",
-      "(0, 9, 1, False)\n"
+     "ename": "TypeError",
+     "evalue": "object of type 'map' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m arr \u001b[39m=\u001b[39m [\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit()) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dp \u001b[39m=\u001b[39m [[(\u001b[39m0\u001b[39m, i, j, \u001b[39mFalse\u001b[39;00m) \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(arr[\u001b[39m0\u001b[39m]))] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m arr:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(row)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 1\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m arr \u001b[39m=\u001b[39m [\u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit()) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dp \u001b[39m=\u001b[39m [[(\u001b[39m0\u001b[39m, i, j, \u001b[39mFalse\u001b[39;00m) \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39;49m(arr[\u001b[39m0\u001b[39;49m]))] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m arr:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(row)\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'map' has no len()"
      ]
     }
    ],
    "source": [
-    "arr = [list(map(int, input().split())) for _ in range(10)]\n",
+    "arr = [input().split() for _ in range(10)]\n",
     "dp = [[(0, i, j, False) for j in range(len(arr[0]))] for i in range(10)]\n",
     "\n",
     "for row in arr:\n",
