--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,18 +109,22 @@
     "    for j in range(1, len(arr[0])):\n",
     "        if arr[i][j] == \"1\":\n",
     "            dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1\n",
+    "            if dp[i][j][0] >= 5:\n",
+    "                dp[i][j][0] = 5\n",
     "            \n",
     "for i in range(1, 10):\n",
     "    if arr[i][0] == \"1\":\n",
     "        dp_new[i][0][0] = 1\n",
     "    for j in range(1, len(arr[0])):\n",
     "        if arr[i][j] == \"1\":\n",
-    "            dp_new[i][j][0] = min(dp_new[i][j-1][0], dp_new[i-1][j][0], dp_new[i-1][j-1][0]) + 1"
+    "            dp_new[i][j][0] = min(dp_new[i][j-1][0], dp_new[i-1][j][0], dp_new[i-1][j-1][0]) + 1\n",
+    "            if dp_new[i][j][0] >= 5:\n",
+    "                dp_new[i][j][0] = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -159,11 +163,11 @@
       "1 2 3 3 3 3 3 3 3 3 \n",
       "1 2 3 4 4 4 4 4 4 4 \n",
       "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 6 6 6 6 6 \n",
-      "1 2 3 4 5 6 7 7 7 7 \n",
-      "1 2 3 4 5 6 7 8 8 8 \n",
-      "1 2 3 4 5 6 7 8 9 9 \n",
-      "1 2 3 4 5 6 7 8 9 10 \n"
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n"
      ]
     }
    ],
