More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -972,7 +972,7 @@
     "                    for l in range(size-1, -1, -1):\n",
     "                        if not dp_new[i-k][j-k][3]:\n",
     "                            sum += 1 \n",
-    "                            print(f\"i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
+    "                            print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
     "                    print()                          \n",
     "                                    \n",
     "            if sum == size ** 2:\n",
