More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -1020,7 +1020,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "size = 5\n",
+    "\n",
+    "while size >=1:\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp_new[0])):\n",
+    "            sum = 0            \n",
+    "            if dp_new[i][j][0] == size:                \n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not dp_new[i-k][j-k][3]:\n",
+    "                            sum += 1 \n",
+    "                            print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
+    "                    print()                          \n",
+    "                                    \n",
+    "            if sum == size ** 2:\n",
+    "                print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        dp_new[i-k][j-l][3] = True                            \n",
+    "                        if not(k==0 and l==0) :                      \n",
+    "                            dp_new[i-k][j-l][0] = 0\n",
+    "    size -= 1           "
+   ]
   },
   {
    "cell_type": "code",
