--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -1022,6 +1022,7 @@
    "outputs": [],
    "source": [
     "size = 5\n",
+    "box_dict = {}\n",
     "\n",
     "while size >=1:\n",
     "    for i in range(10):\n",
@@ -1033,8 +1034,8 @@
     "                        if not dp_new[i-k][j-k][3]:\n",
     "                            sum += 1 \n",
     "                            print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
-    "                    print()                          \n",
-    "                                    \n",
+    "                    print()            \n",
+    "                               \n",
     "            if sum == size ** 2:\n",
     "                print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
     "                for k in range(size-1, -1, -1):\n",
