More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -1037,12 +1037,19 @@
     "                    print()            \n",
     "                               \n",
     "            if sum == size ** 2:\n",
-    "                print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
-    "                for k in range(size-1, -1, -1):\n",
-    "                    for l in range(size-1, -1, -1):\n",
-    "                        dp_new[i-k][j-l][3] = True                            \n",
-    "                        if not(k==0 and l==0) :                      \n",
-    "                            dp_new[i-k][j-l][0] = 0\n",
+    "                if size not in box_dict.keys():\n",
+    "                    box_dict[size] = 1\n",
+    "                else:\n",
+    "                    box_dict[size] += 1\n",
+    "                \n",
+    "                if box_dict[size] <= 5:                    \n",
+    "                    print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
+    "                    for k in range(size-1, -1, -1):\n",
+    "                        for l in range(size-1, -1, -1):\n",
+    "                            dp_new[i-k][j-l][3] = True                            \n",
+    "                            if not(k==0 and l==0) :                      \n",
+    "                                dp_new[i-k][j-l][0] = 0              \n",
+    "                                        \n",
     "    size -= 1           "
    ]
   },
@@ -1051,7 +1058,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sum = 0\n",
+    "for i in range(len(dp_new)):\n",
+    "    for j in range(len(dp_new[i])):\n",
+    "        if dp_new[i][j][0] != 0:\n",
+    "            sum += 1\n",
+    "        \n",
+    "print(sum)"
+   ]
   },
   {
    "cell_type": "code",
