More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -1107,51 +1107,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
     }
    ],
    "source": [
-    "any([x <= 5 for x in box_dict.values()])"
+    "input = open(\"data/boj_17136.txt\", \"r\").readline\n",
+    "\n",
+    "\n",
+    "arr = [input().split() for _ in range(10)]\n",
+    "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "\n",
+    "for i in range(len(arr[0])):\n",
+    "    if arr[0][i] == \"1\":\n",
+    "        dp[0][i][0] = 1\n",
+    "        \n",
+    "for i in range(1, 10):\n",
+    "    if arr[i][0] == \"1\":\n",
+    "        dp[i][0][0] = 1\n",
+    "    for j in range(1, len(arr[0])):\n",
+    "        if arr[i][j] == \"1\":\n",
+    "            dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1\n",
+    "            if dp[i][j][0] >= 5:\n",
+    "                dp[i][j][0] = 5\n",
+    "                \n",
+    "size = 5\n",
+    "box_dict = {}\n",
+    "\n",
+    "while size >=1:\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp_new[0])):\n",
+    "            sum = 0            \n",
+    "            if dp_new[i][j][0] == size:                \n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not dp_new[i-k][j-k][3]:\n",
+    "                            sum += 1 \n",
+    "                            #print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
+    "                    #print()            \n",
+    "                               \n",
+    "            if sum == size ** 2:\n",
+    "                if size not in box_dict.keys():\n",
+    "                    box_dict[size] = 1\n",
+    "                else:\n",
+    "                    box_dict[size] += 1\n",
+    "                \n",
+    "                if box_dict[size] <= 5:                    \n",
+    "                    #print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
+    "                    for k in range(size-1, -1, -1):\n",
+    "                        for l in range(size-1, -1, -1):\n",
+    "                            dp_new[i-k][j-l][3] = True                            \n",
+    "                            if not(k==0 and l==0) :                      \n",
+    "                                dp_new[i-k][j-l][0] = 0              \n",
+    "                                        \n",
+    "    size -= 1  \n",
+    "    \n",
+    "sum = 0\n",
+    "if any([x <= 5 for x in box_dict.values()]):\n",
+    "    for i in range(len(dp_new)):\n",
+    "        for j in range(len(dp_new[i])):\n",
+    "            if dp_new[i][j][0] != 0:\n",
+    "                sum += 1\n",
+    "else:\n",
+    "    sum = -1\n",
+    "        \n",
+    "print(sum)         "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = [2>4,4>4, 5>4,7>4]\n",
-    "any(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
