More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -280,15 +280,15 @@
     "\n",
     "while size >=1:\n",
     "    for i in range(10):\n",
-    "        for j in range(len(dp_new[0])):\n",
+    "        for j in range(len(dp[0])):\n",
     "            sum = 0            \n",
-    "            if dp_new[i][j][0] == size:                \n",
+    "            if dp[i][j][0] == size:                \n",
     "                for k in range(size-1, -1, -1):\n",
     "                    for l in range(size-1, -1, -1):\n",
-    "                        if not dp_new[i-k][j-k][3]:\n",
+    "                        if not dp[i-k][j-k][3]:\n",
     "                            sum += 1 \n",
-    "                            print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
-    "                    print()            \n",
+    "                            #print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
+    "                    #print()            \n",
     "                               \n",
     "            if sum == size ** 2:\n",
     "                if size not in box_dict.keys():\n",
@@ -297,14 +297,27 @@
     "                    box_dict[size] += 1\n",
     "                \n",
     "                if box_dict[size] <= 5:                    \n",
-    "                    print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
+    "                    #print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
     "                    for k in range(size-1, -1, -1):\n",
     "                        for l in range(size-1, -1, -1):\n",
-    "                            dp_new[i-k][j-l][3] = True                            \n",
+    "                            dp[i-k][j-l][3] = True                            \n",
     "                            if not(k==0 and l==0) :                      \n",
-    "                                dp_new[i-k][j-l][0] = 0              \n",
+    "                                dp[i-k][j-l][0] = 0              \n",
     "                                        \n",
-    "    size -= 1           "
+    "    size -= 1  \n",
+    "    \n",
+    "sum = 0\n",
+    "if any([x <= 5 for x in box_dict.values()]):\n",
+    "    for i in range(len(dp)):\n",
+    "        for j in range(len(dp[i])):\n",
+    "            if dp[i][j][0] != 0:\n",
+    "                sum += 1\n",
+    "elif not box_dict:\n",
+    "    sum = 0\n",
+    "else:\n",
+    "    sum = -1\n",
+    "        \n",
+    "print(sum)             "
    ]
   },
   {
