More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -245,35 +245,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size : 1,  i-k : 1,  j-l : 1,  False\n",
-      "\n",
-      "sum : 1, i : 1,  j :1\n",
-      "size : 1,  i-k : 1,  j-l : 2,  False\n",
-      "\n",
-      "sum : 1, i : 1,  j :2\n",
-      "size : 1,  i-k : 2,  j-l : 2,  False\n",
-      "\n",
-      "sum : 1, i : 2,  j :2\n",
-      "size : 1,  i-k : 3,  j-l : 4,  False\n",
-      "\n",
-      "sum : 1, i : 3,  j :4\n",
-      "size : 1,  i-k : 3,  j-l : 5,  False\n",
-      "\n",
-      "sum : 1, i : 3,  j :5\n",
-      "size : 1,  i-k : 4,  j-l : 5,  False\n",
-      "\n",
-      "size : 1,  i-k : 6,  j-l : 2,  False\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "size = 5\n",
     "box_dict = {}\n",
@@ -304,20 +278,7 @@
     "                            if not(k==0 and l==0) :                      \n",
     "                                dp[i-k][j-l][0] = 0              \n",
     "                                        \n",
-    "    size -= 1  \n",
-    "    \n",
-    "sum = 0\n",
-    "if any([x <= 5 for x in box_dict.values()]):\n",
-    "    for i in range(len(dp)):\n",
-    "        for j in range(len(dp[i])):\n",
-    "            if dp[i][j][0] != 0:\n",
-    "                sum += 1\n",
-    "elif not box_dict:\n",
-    "    sum = 0\n",
-    "else:\n",
-    "    sum = -1\n",
-    "        \n",
-    "print(sum)             "
+    "    size -= 1            "
    ]
   },
   {
